# ciftl-rs

./: Cargo.toml  README.md
ciftl-core/: Cargo.toml
ciftl-core/src/: lib.rs
ciftl-core/src/crypter/: chacha20.rs  mod.rs
ciftl-core/src/encoding/: base64.rs  hex.rs  mod.rs
ciftl-core/src/etc/: error.rs  memory.rs  mod.rs
ciftl-core/src/hash/: crc.rs  mod.rs  sha1.rs  sha256.rs  sha512.rs
