[package]
name = "ciftl-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "ciftl_core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ciftl-crypter"
path = "bin/crypter.rs"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = "0.2.14"
num-derive = "0.3.3"
base64 = "0.21.0"
hex = "0.4.3"
rand = "0.8.5"
ring = "0.17.8"
